--- a/src/application/layouts/default.phtml
+++ b/src/application/layouts/default.phtml
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	   <meta charset="utf-8">
+        <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        
-
-        <title>MVC niveau 1</title>
+        <title><?= $this->getTitle();?></title>
 
         <!-- Bootstrap core CSS -->
         <link href="/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -34,8 +32,8 @@
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Accueil</a></li>
-                        <li><a href="/index/test">Test 1</a></li>
+                        <li class="<?= $this->isActive('index/index')?"active":""; ?>"><a href="/">Accueil</a></li>
+                        <li class="<?= $this->isActive('index/test')?"active":""; ?>"><a href="/index/test">Test 1</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div><!--/.nav-collapse -->
@@ -53,7 +51,7 @@
         <!-- Bootstrap core JavaScript
         ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+        <script src="assets/jquery/dist/jquery.min.js"></script>
         <script src="/assets/bootstrap/dist/js/bootstrap.min.js"></script>
     </body>
 </html>
