--- a/src/application/layouts/default.phtml
+++ b/src/application/layouts/default.phtml
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title><?= $this->getTitle();?></title>
+        <title><?= $this->title();?></title>
 
         <!-- Bootstrap core CSS -->
         <link href="/assets/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
